tests/rgs/valid/flat_formatting.rgs
STORY a PRIORITY 1.
ACTION run.
EVENT spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
DURING a: WHEN spotted ENVIRONMENT IF NOT is_tired MYSELF: DO run.
