tests/rgs/syntax_errors/unclosed_parenthesis.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    CONDITION tired MYSELF.
    CONDITION armed MYSELF.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT IF (tired MYSELF OR armed MYSELF:
                DO run.
